fix overflowY in PopUp

--- a/src/components/ui/PopUpWrapper/PopUpWrapper.module.scss
+++ b/src/components/ui/PopUpWrapper/PopUpWrapper.module.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1000; /* Поверх остальных элементов */
+   
     
 }
 
@@ -23,6 +24,8 @@
     text-align: center;
     margin: 0 auto;
     overflow: auto;
+    overflow-y: auto;
+    max-height: 80vh;
 }
 
 .closeButton {
